fix gap

--- a/Front end/components/game page/style.css
+++ b/Front end/components/game page/style.css
@@ -83,7 +83,7 @@ section h1 {
     align-items: center;
     flex-direction: column;
     width: 50%;
-    gap: 7% ;
+    gap: 1em;
     flex: 1;
     
 }
